fixed scrollbar bug

--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -50,7 +50,11 @@ html {
 body {
   padding: 0;
   margin: 0;
-  overflow: hidden;
+  /* overflow: hidden; */
+}
+
+body::-webkit-scrollbar {
+  display: none;
 }
 
 
